2012-07-15  Peter Bloomfield

	* src/mailbox-node.c (balsa_mailbox_local_append): simplify.

2012-07-15  Peter Bloomfield

	* libbalsa/mailbox_imap.c (imap_cache_manager_new_from_file): do
	not leak FILE on error.

2012-07-15  Peter Bloomfield

	* libbalsa/imap/pop3.c (pop_check_status): remove redundant else
	clause.

2012-07-15  Peter Bloomfield

	* libbalsa/identity.h: typo.

2012-07-15  Peter Bloomfield

	* libbalsa/identity.c (libbalsa_identity_get_signature): limit
	scope of fp.

2012-07-15  Peter Bloomfield

	* src/sendmsg-window.c (edit_with_gnome): plug mem leak.

2012-07-15  Peter Bloomfield

	* libbalsa/address.c (libbalsa_address_extract_name): plug mem
	leak.

2012-07-15  Peter Bloomfield

	* libbalsa/address-book-ldif.c
	(libbalsa_address_book_ldif_save_address): fseek before writing
	to stream.

2012-07-15  Peter Bloomfield

	* libbalsa/imap/imap_compress.c (imap_compress_init): memset
	size of struct, not size of pointer to struct.

2012-07-15  Peter Bloomfield

	* src/balsa-mime-widget-text.c (structured_phrases_toggle):
	typo.

2012-07-15  Peter Bloomfield

	* libbalsa/imap/imap_search.c (imap_write_key_string): typo.

2012-07-15  Albrecht Dreß

	* src/sendmsg-window.c (edit_with_gnome): fix mem leak on error.

2012-07-15  Albrecht Dreß

	* src/mailbox-conf.c (mailbox_conf_delete): fix mem leak on
	error.

2012-07-15  Albrecht Dreß

	* src/information-dialog.c (balsa_information_real): fix mem
	leak on NULL main widget.

2012-07-15  Albrecht Dreß

	* src/folder-conf.c (folder_conf_imap_sub_node): fix mem leak
	on error.

2012-07-15  Albrecht Dreß

	* src/balsa-index.c (bndx_start_pipe_messages_array): fix mem
	leak on error.

2012-07-15  Albrecht Dreß

	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_add_message):
	fix mem leak on error.

2012-07-15  Albrecht Dreß

	* libbalsa/mailbox_imap.c (imap_cache_manager_new_from_file): do
	not leak open file on error.

2012-07-15  Albrecht Dreß
